# genAI-social-media-campaign-engine

./: .env  .env.example  Sangam 2.0.csv  dosage_rag_knowledge.json  example posts 1.md  implementation_plan ms forms campaign amp sangam 2.0.md  implementation_plan_final.md  ms_forms_dropdowns.txt  product_manual_rag_knowledge.json  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: architecture.md  deployment.md  troubleshooting.md  user_guide.md
scratch/: test_csv_data.py  test_orchestrator.py  test_rag.py
src/: __init__.py  config.py  main.py
src/core/: __init__.py  brief_parser.py  llm_client.py  orchestrator.py  rag.py  templates.py
src/data/: parser.py  product_knowledge.json
src/generators/: __init__.py  base.py  facebook.py  instagram.py  linkedin.py  whatsapp.py
src/scripts/: extract_form_options.py
src/translators/: __init__.py  translator.py
src/ui/: __init__.py  app.py  components.py
tests/: __init__.py  test_brief_parser.py  test_generators.py  test_llm_client.py  test_parser.py  test_translator.py
