[project]
name = "bayer-campaign-engine"
version = "0.1.0"
description = "AI-powered Pre-Event Campaign Amplification Engine for Bayer"
authors = [
    { name = "Bayer Developer" }
]
requires-python = ">=3.9"
dependencies = [
    "google-genai>=0.1.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "jinja2>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
